--- a/package.json
+++ b/package.json
@@ -10,12 +10,22 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.19",
+        "axios": "^1.2.2",
+        "browser-sync": "^2.27.11",
+        "browser-sync-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0",
-        "laravel-mix": "^5.0.1",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^8.0.0"
+        "sass-loader": "^8.0.0",
+        "vue": "^3.2.45",
+        "vue-template-compiler": "^2.7.14"
+    },
+    "dependencies": {
+        "ajv": "^8.12.0",
+        "discord.js": "^14.7.1",
+        "discord.js-commando": "^0.12.3",
+        "jquery": "^3.6.3"
     }
 }
