--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "laracasts/utilities": "^3.2",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5"
     },
@@ -38,7 +39,9 @@
         },
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "app/Dashboard",
+            "app/Dashboard/Utilities"
         ]
     },
     "autoload-dev": {
